Commenting...like I shouldve been

--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -9,9 +9,39 @@
 
       {% include "textchange/navbar.html" %}
 
-      <h2>Application Help</h2>
+      <h1>Application Help</h1>
+      <p>This page gives a basic overview of all the main use cases that can be completed in the application. After reading this
+       you should know how to complete each use case in the most efficient way possible.</p>
+      <h2 id="toc">Table of Contents</h2>
+      <ul>
+        <li><a href="#Create">Creating An Account</a></li>
+        <li><a href="#Search">Searching</a></li>
+        <li><a href="#PostWish">Creating Postings and Wishes</a></li>
+        <li><a href="#Contact">Contacting Buyers and Sellers</a></li>
+        <li><a href="#Wishlisting">Managing Wishlist and Postings</a></li>
+      </ul>
 
-      
+      <h2 id="Create">Creating An Account</h2>
+      <p>In order to create an account, first click on the create account button on the top right of the page.</p>
+      <a href="#toc">Back to Top</a>
+      <h2 id="Search">Searching</h2>
+      <p>In order to search for textbooks type keywords into the search box on the home page. You can search for your textbooks by typing your
+        class name, number, textbook name, textbook isbn, or textbook author. Searching by isbn is the most efficient way of looking for a textbook.
+        After searching you will be presented with a list of textbooks. Click on the arrow on the right side of one of the a box to go to the
+        textbook details page.
+      </p>
+      <a href="#toc">Back to Top</a>
+      <h2 id="PostWish">Creating Postings and Wishes</h2>
+      <p>In order to create a posting or add a book to your wishlist you must first search for the textbook and select it from the results page.</p>
+      <a href="#toc">Back to Top</a>
+      <h2 id="Contact">Contacting Buyers and Sellers</h2>
+      <p>shit</p>
+      <a href="#toc">Back to Top</a>
+      <h2 id="Wishlisting">Managing Wishlist and Postings</h2>
+      <p>and stuff</p>
+      <a href="#toc">Back to Top</a>
+
+
       <footer class="footer">
         <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
       </footer>
