--- a/textchange/templates/textchange/textbook.html
+++ b/textchange/templates/textchange/textbook.html
@@ -12,12 +12,14 @@
       <div class="jumbotron">
         <h1>{{ text.textbook_name }}!</h1>
         <p class="lead">{{ text.class_name }} {{ text.author }} {{ text.isbn }}</p>
-        <form action="{% url 'textchange:textbook' uisbn=text.isbn %}" method="post"> {% csrf_token %}
           {% if postexist %}
-          <input class="bad button" type="submit" name="DeleteListing" value="Delete your Posting"></input>
+          <form action="{% url 'textchange:textbook' uisbn=text.isbn %}" method="post"> {% csrf_token %}
+            <input class="bad button" type="submit" name="DeleteListing" value="Delete your Posting"></input>
+          </form>
           {% else %}
-          <input class="good button" type="submit" name="AddListing" value="Add a Posting"></input>
+          <a href= "{% url 'textchange:addposting' uisbn=text.isbn %}" class="good button">Add a Posting</a>
           {% endif %}
+        <form action="{% url 'textchange:textbook' uisbn=text.isbn %}" method="post"> {% csrf_token %}
           {% if wishexist %}
           <input class="bad button" type="submit" name="DeleteWishlist" value="Delete from your Wishlist"></input>
           {% else %}
