--- a/textchange/static/textchange/index.css
+++ b/textchange/static/textchange/index.css
@@ -34,6 +34,17 @@
   background-color: #C5C5C5;
 }
 
+.hacks {
+  margin-top: 15px;
+}
+
+.textbut {
+  padding: 15px;
+  margin-bottom: 15px;
+  padding-left: 45px;
+  padding-right: 45px;
+}
+
 .button {
   border-radius:6px;
 }
