--- a/textchange/static/textchange/index.css
+++ b/textchange/static/textchange/index.css
@@ -69,6 +69,15 @@
   border-radius:6px;
 }
 
+#resultsbutton {
+  margin-top: 10px;
+}
+
+.nextbutton {
+  width: 35px;
+
+}
+
 #help {
   position: fixed;
   height: 30px;
