--- a/textchange/templates/textchange/profile.html
+++ b/textchange/templates/textchange/profile.html
@@ -11,12 +11,7 @@
       {% include "textchange/navbar.html" %}
 
       <div class="jumbotron">
-        <p><strong>{{ text.textbook_name }}<strong></p>
-        <p>{{ text.author }} &nbsp; {{ text.class_name }} &nbsp; {{ text.isbn }}</p>
-        <form action="{% url 'textchange:addposting' uisbn=text.isbn %}" method="POST"> {% csrf_token %}
-          {{ form.as_p }}
-          <input type="submit" value="Add a Posting"></input>
-        </form>
+        <p><strong>{{ curuser.username }}<strong></p>
 
       </div>
 
