--- a/textchange/static/textchange/index.css
+++ b/textchange/static/textchange/index.css
@@ -38,9 +38,8 @@
   margin-top: 15px;
 }
 
-.textbut {
+.addpost {
   padding: 15px;
-  margin-bottom: 15px;
   padding-left: 45px;
   padding-right: 45px;
 }
