--- a/textchange/templates/textchange/results.html
+++ b/textchange/templates/textchange/results.html
@@ -16,7 +16,7 @@
 	  </div>
     <div class="panel panel-default">
       <!-- Default panel contents -->
-      <div class="panel-heading">Search Results</div>
+      <div class="panel-heading"><h4>Search Results</h4></div>
 
       <!-- Table -->
       <table class="table">
