--- a/textchange/templates/textchange/404.html
+++ b/textchange/templates/textchange/404.html
@@ -1,18 +1,15 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
   {% include "textchange/head.html" %}
-
   <body>
-
     <div class="container">
-
       {% include "textchange/navbar.html" %}
 
       <div class="jumbotron">
-        <p><strong>{{ curuser.username }}<strong></p>
-
+        <h1>Oops! 404</h1>
+        <p>This page does not exist. You can go home here <a href="{% url 'textchange:home' %}">Texchange UVic</a></p>
+        <h3>(╯'□')╯  ┻━┻</h3>
       </div>
 
       <footer class="footer">
@@ -20,6 +17,8 @@
       </footer>
 
     </div> <!-- /container -->
+
+
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
