--- a/textchange/templates/textchange/contactpost.html
+++ b/textchange/templates/textchange/contactpost.html
@@ -25,11 +25,13 @@
       </div>
 
       <div class="col-lg-6">
-          <img src="{{ posting.image.url }}">
+        {% block content %}
+          <img src="{{ posting.image.url }}" style="height: 350px; width: 300px;">
+        {% endblock %}
+      </div>
+
 
     </div>
-
-    </div> <!-- /container -->
 
     <footer class="footer">
       <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
