--- a/textchange/templates/textchange/results.html
+++ b/textchange/templates/textchange/results.html
@@ -20,9 +20,15 @@
 
       <!-- Table -->
       <table class="table">
-        {% for items in results %}
-        <tr><td><p><strong>{{items.class_name}}</strong></p><p>{{items.author}}</p></td><td><p>{{items.textbook_name}}</p><p>{{items.isbn}}</p></td><td><a href = "{% url 'textchange:textbook' uisbn=items.isbn %}"><img src="../../static/textchange/nextarrow.png" class="nextbutton" id="resultsbutton"></a></td></tr>
-        {% endfor %}
+        {% if curuser.is_authenticated %}
+          {% for items in results %}
+          <tr><td><p><strong>{{items.class_name}}</strong></p><p>{{items.author}}</p></td><td><p>{{items.textbook_name}}</p><p>{{items.isbn}}</p></td><td><a href = "{% url 'textchange:textbook' uisbn=items.isbn %}"><img src="../../static/textchange/nextarrow.png" class="nextbutton" id="resultsbutton"></a></td></tr>
+          {% endfor %}
+        {% else %}
+          {% for items in results %}
+          <tr><td><p><strong>{{items.class_name}}</strong></p><p>{{items.author}}</p></td><td><p>{{items.textbook_name}}</p><p>{{items.isbn}}</p></td><td><a href = "#" title="Login Required."><img src="../../static/textchange/nextarrow.png" class="nextbutton" id="resultsbutton"></a></td></tr>
+          {% endfor %}
+        {% endif %}
       </table>
     </div>
 
