--- a/textchange/static/textchange/index.css
+++ b/textchange/static/textchange/index.css
@@ -9,6 +9,15 @@
   width: 300px;
 }
 
+#notloggedwish {
+  height: 45px;
+  width: 300px;
+  border-radius: 6px;
+  background-color: #C5C5C5;
+  border: 1px solid #C5C5C5;
+  color: black;
+}
+
 .good {
   background-color: #52B452;
   height: 50px;
@@ -26,6 +35,13 @@
   height: 35px;
   width: 70px;
   border-radius:6px;
+}
+
+#postimage {
+  margin-top: 20px;
+  max-height: 340px;
+  border-radius: 6px;
+  max-width: 320px;
 }
 
 #search {
