--- a/textchange/templates/textchange/contactpost.html
+++ b/textchange/templates/textchange/contactpost.html
@@ -25,9 +25,7 @@
       </div>
 
       <div class="col-lg-6">
-        {% block content %}
-          <img src="{{ posting.image.url }}" style="height: 350px; width: 300px;">
-        {% endblock %}
+          <img src="{{ posting.image.url }}" id="postimage">
       </div>
 
 
@@ -37,6 +35,7 @@
       <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
     </footer>
 
+  </div>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
