--- a/textchange/templates/textchange/textbook.html
+++ b/textchange/templates/textchange/textbook.html
@@ -14,7 +14,7 @@
         <p class="lead">{{ text.class_name }} {{ text.author }} {{ text.isbn }}</p>
           {% if postexist %}
           <form action="{% url 'textchange:textbook' uisbn=text.isbn %}" method="post"> {% csrf_token %}
-            <input class="bad button" type="submit" name="DeleteListing" onclick="return confirm('Are you sure you want to delete your posting?')" value="Delete your Posting"></input>
+            <input class="bad button" type="submit" name="DeleteListing" onclick="return confirm('Are you sure you want to delete {{ text.textbook_name }} from your postings?')" value="Delete your Posting"></input>
           </form>
           {% else %}
           <a href= "{% url 'textchange:addposting' uisbn=text.isbn %}" class="good button blacklink addpost">Add a Posting</a>
@@ -22,9 +22,9 @@
         <form action="{% url 'textchange:textbook' uisbn=text.isbn %}" method="post"> {% csrf_token %}
           {% if wishexist %}
             {% if postexist %}
-            <input class="bad button" type="submit" name="DeleteWishlist" onclick="return confirm('Are you sure you want to delete your wish?')" value="Delete from your Wishlist"></input>
+            <input class="bad button" type="submit" name="DeleteWishlist" onclick="return confirm('Are you sure you want to delete {{ text.textbook_name }} from your wishlist?')" value="Delete from your Wishlist"></input>
             {% else %}
-            <input class="bad button hacks" type="submit" name="DeleteWishlist" onclick="return confirm('Are you sure you want to delete your wish?')" value="Delete from your Wishlist"></input>
+            <input class="bad button hacks" type="submit" name="DeleteWishlist" onclick="return confirm('Are you sure you want to delete {{ text.textbook_name }} from your wishlist?')" value="Delete from your Wishlist"></input>
             {% endif %}
           {% else %}
             {% if postexist %}
