--- a/textchange/templates/textchange/wishlisting.html
+++ b/textchange/templates/textchange/wishlisting.html
@@ -20,7 +20,7 @@
             <tr><td style="width: 235px;"><a href="{% url 'textchange:textbook' uisbn=wishes.textbook.isbn %}" class="blacklink">{{wishes.textbook}}</a></td>
               <td style="width: 85px;">
               <form action="{% url 'textchange:removewishlisting' uisbn=wishes.textbook.isbn %}" method="post"> {% csrf_token %}
-              <input class="delete" type="submit" name="DeleteWishlist"  onclick="return confirm('Are you sure you want to delete your wish?')" value="Delete"></input>
+              <input class="delete" type="submit" name="DeleteWishlist"  onclick="return confirm('Are you sure you want to delete {{wishes}} from your wishlist?')" value="Delete"></input>
               </form>
               </td></tr>
             {% endfor %}
@@ -34,7 +34,7 @@
             <tr><td style="width: 160px;"><a href="{% url 'textchange:textbook' uisbn=posts.textbook.isbn %}" class="blacklink">{{posts.textbook}}</a></td><td style="width: 75px;">${{posts.price}}</td>
               <td style="width: 85px;">
               <form action="{% url 'textchange:removewishlisting' uisbn=posts.textbook.isbn %}" method="post"> {% csrf_token %}
-              <input class="delete" type="submit" name="DeletePosting"  onclick="return confirm('Are you sure you want to delete your posting?')" value="Delete"></input>
+              <input class="delete" type="submit" name="DeletePosting"  onclick="return confirm('Are you sure you want to delete {{posts}} from your postings?')" value="Delete"></input>
               </form>
               </td></tr>
             {% endfor %}
