Edit scrape script, tldr in help

--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -12,6 +12,7 @@
       <h1>Application Help</h1>
       <p>This page gives a basic overview of all the main use cases that can be completed in the application. After reading this
        you should know how to complete each use case in the most efficient way possible.</p>
+      <p>TLDR: Searching for textbooks by class name will not always be accurate. Searching by isbn, author, or textbook name is your best chance</p>
       <h2 id="toc">Table of Contents</h2>
       <ul>
         <li><a href="#Create">Creating An Account</a></li>
