Displaying class list for textbooks, looks awesome

--- a/textchange/static/textchange/index.css
+++ b/textchange/static/textchange/index.css
@@ -51,11 +51,11 @@
 }
 
 .hacks {
-  margin-top: 15px;
+  margin-bottom: 16px;
 }
 
 .addpost {
-  padding: 15px;
+  padding: 16px;
   padding-left: 45px;
   padding-right: 45px;
 }
