--- a/textchange/templates/textchange/textbook.html
+++ b/textchange/templates/textchange/textbook.html
@@ -31,7 +31,6 @@
           <p>Item is offered for many textbooks.</p>
         {% endif %}
 
-
         <div >
           <table class="center">
           <tr>
@@ -74,7 +73,7 @@
           <h3>Possible Buyers</h3>
           <table class="table">
             {% for wishes in wishlists %}
-            <tr><td style="width: 270px;">{{wishes.user}}</td><td><a href = "{% url 'textchange:contactwish' uuser=wishes.user uisbn=text.isbn %}"><img src="../../static/textchange/nextarrow.png" class="nextbutton"></a></td></tr>
+            <tr><td class="width270">{{wishes.user}}</td><td><a href = "{% url 'textchange:contactwish' uuser=wishes.user uisbn=text.isbn %}"><img src="../../static/textchange/nextarrow.png" class="nextbutton"></a></td></tr>
             {% endfor %}
           </table>
         </div>
@@ -83,7 +82,7 @@
           <h3>Possible Sellers</h3>
           <table class="table">
             {% for posts in listings %}
-            <tr><td style="width: 85px;">{{posts.condition}}</td><td style="width: 75px;">${{posts.price}}</td><td style="width: 110px;">{{posts.user}}</td><td><a href = "{% url 'textchange:contactpost' uuser=posts.user uisbn=text.isbn %}"><img src="../../static/textchange/nextarrow.png" class="nextbutton"></a></td></tr>
+            <tr><td class="width85">{{posts.condition}}</td><td class="width75">${{posts.price}}</td><td class="width110">{{posts.user}}</td><td><a href = "{% url 'textchange:contactpost' uuser=posts.user uisbn=text.isbn %}"><img src="../../static/textchange/nextarrow.png" class="nextbutton"></a></td></tr>
             {% endfor %}
           </table>
         </div>
