--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -27,11 +27,11 @@
           {% else %}
             <a class="btn btn-lg btn-success option" id="notloggedwish" href="" role="button" title="Login Required.">Wishlist and Postings</a>
           {% endif %}
-          <span>View and delete items from your wishlist and postings here.</span>
+          <span>Delete items from your wishlist and postings here</span>
         </div>
         <div class="col-lg-6">
-          <a class="btn btn-lg btn-success option" href="{% url 'textchange:about' %}" role="button">About Me</a>
-          <span>Learn about, support, and contact the developer</span>
+          <a class="btn btn-lg btn-success option" href="{% url 'textchange:about' %}" role="button">Contact Us</a>
+          <span>Contact and support the developer</span>
         </div>
       </div>
 
