--- a/textchange/static/textchange/index.css
+++ b/textchange/static/textchange/index.css
@@ -75,6 +75,18 @@
   background-color: #C5C5C5;
 }
 
+.addpostform {
+  width: 320px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.centertext {
+  text-align: center;
+  vertical-align: middle;
+}
+
 .center {
   margin: 0 auto;
 }
