--- a/textchange/templates/textchange/addposting.html
+++ b/textchange/templates/textchange/addposting.html
@@ -9,16 +9,16 @@
     <div class="container">
 
       {% include "textchange/navbar.html" %}
-
-      <div class="jumbotron">
-        <p><strong>{{ text.textbook_name }}<strong></p>
+      <div class="addpostform centertext" style="background-color: #F8F8F8; padding: 15px; border-radius: 15px;">
+        <p>{{ text.textbook_name }}</p>
         <p>{{ text.author }} &nbsp; {{ text.isbn }}</p>
         <form action="{% url 'textchange:addposting' uisbn=text.isbn %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
           {{ form.as_p }}
-          <input type="submit" value="Add a Posting"></input>
+          <input type="submit" value="Add a Posting" class="good button"></input>
         </form>
-
       </div>
+      </br>
+
 
       <footer class="footer">
         <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
