--- a/textchange/templates/textchange/results.html
+++ b/textchange/templates/textchange/results.html
@@ -19,7 +19,7 @@
       {% if curuser.is_authenticated %}
         <div class="panel-heading"><h4>Search Results</h4><p>{{numresults}} results were returned.</p></div>
       {% else %}
-        <div class="panel-heading"><h4>Search Results</h4><p>{{numresults}} results were returned.</p><p>Login required to view textbooks.</p></div>
+        <div class="panel-heading"><h4>Search Results</h4><p>{{numresults}} results were returned.</p><p id="noresults">Login required to view textbooks.</p></div>
       {% endif %}
 
       <!-- Table -->
